--- a/3. 无重复字符的最长子串.md
+++ b/3. 无重复字符的最长子串.md
@@ -26,6 +26,7 @@ public:
                 if(l > maxLength)
                     maxLength = l;
                 maxSubStr = maxSubStr.substr(index, l);//从index开始往后l个长度，多于字符串长度则截取到endl
+                //error就是这步，index错了
             }
         }
         // cout<<maxSubStr;
@@ -39,4 +40,72 @@ public:
 "aab"
 
 "aabaab!bb"
+
+```C++
+class Solution {
+public:
+    int lengthOfLongestSubstring(string s) {
+        string maxSubStr = "";
+        int maxLength = 0;
+        for(int i=0;i<s.length();i++)
+        {
+            char t = s[i];
+            int index = maxSubStr.find(t);
+            if(index == maxSubStr.npos)
+            {
+                maxSubStr += t;
+                // cout<<1<<maxSubStr<<endl;
+            }
+            else
+            {
+                int l = maxSubStr.length();
+                if(l > maxLength)
+                    maxLength = l;
+                maxSubStr = maxSubStr.substr(index+1, l);//从index开始往后l个长度，多于字符串长度则截取到endl
+                maxSubStr += t;
+                // cout<<index <<maxSubStr<<endl;
+            }
+        }
+        int l = maxSubStr.length();
+        if(l > maxLength)
+            maxLength = l;
+        return maxLength;
+    }
+};
+```
+
+
+
+# 其他解法
+
+非常强，且答主对“滑动窗口”进行了归纳
+
+因为只需要返回长度，所以可以使用**集合**作为容器
+
+```C++
+class Solution {
+public:
+    int lengthOfLongestSubstring(string s) {
+        if(s.size() == 0) return 0;
+        unordered_set<char> lookup;
+        int maxStr = 0;
+        int left = 0;
+        for(int i = 0; i < s.size(); i++){
+            while (lookup.find(s[i]) != lookup.end()){
+                lookup.erase(s[left]);
+                left ++;
+            }
+            maxStr = max(maxStr,i-left+1);
+            lookup.insert(s[i]);
+    }
+        return maxStr;
+        
+    }
+};
+
+作者：powcai
+链接：https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/solution/hua-dong-chuang-kou-by-powcai/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
 
